--- a/.vercelignore
+++ b/.vercelignore
@@ -28,6 +28,9 @@ src/assets/chiesa.png
 src/assets/calle.png
 src/assets/logo.png
 src/assets/bikini.jpeg
+src/assets/rose.png
+src/assets/bikini.webp
+src/assets/bikini_new.png
 
 # Exclude image and font folders
 # src/assets/
